додає іконки та затемнює героя

--- a/index.html
+++ b/index.html
@@ -70,28 +70,28 @@
         <div class="container advantages-content">
           <h2 class="section-title visually-hidden">Our advantages</h2>
           <ul class="section-list">
-            <li class="section-item list">
+            <li class="section-item list icon-antenna">
               <h3 class="section-subtitle">Strategy</h3>
               <p class="section-desc">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="section-item list">
+            <li class="section-item list icon-clock">
               <h3 class="section-subtitle">Punctuality</h3>
               <p class="section-desc">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="section-item list">
+            <li class="section-item list icon-diagram">
               <h3 class="section-subtitle">Diligence</h3>
               <p class="section-desc">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="section-item list">
+            <li class="section-item list icon-astronaut">
               <h3 class="section-subtitle">Technologies</h3>
               <p class="section-desc">
                 Design practice focused on digital experiences. We bring forth a
@@ -128,6 +128,12 @@
               <div class="team-content">
                 <h3 class="section-subtitle">Mark Guerrero</h3>
                 <p class="section-desc">Product Designer</p>
+                <!-- <ul class="team-sm-list">
+                  <li><a class="icon-team-box" href=""></a></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul> -->
               </div>
             </li>
             <li class="section-item list">
