--- a/index.html
+++ b/index.html
@@ -128,12 +128,42 @@
               <div class="team-content">
                 <h3 class="section-subtitle">Mark Guerrero</h3>
                 <p class="section-desc">Product Designer</p>
-                <!-- <ul class="team-sm-list">
-                  <li><a class="icon-team-box" href=""></a></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                </ul> -->
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-item list">
@@ -141,6 +171,42 @@
               <div class="team-content">
                 <h3 class="section-subtitle">Tom Ford</h3>
                 <p class="section-desc">Frontend Developer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-item list">
@@ -148,6 +214,42 @@
               <div class="team-content">
                 <h3 class="section-subtitle">Camila Garcia</h3>
                 <p class="section-desc">Marketing</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-item list">
@@ -155,21 +257,137 @@
               <div class="team-content">
                 <h3 class="section-subtitle">Daniel Wilson</h3>
                 <p class="section-desc">UI Designer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link link">
+                      <svg class="team-soc-item" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="customers section">
+        <div class="container">
+          <h2 class="section-title">Customers</h2>
+          <ul class="company-list">
+            <li class="company-logo-box">
+              <a href="" class="customers-link link">
+                  <svg class="company-logo" width="104" height="56">
+                    <use class="customers-icon" href="./images/customers-item2.svg#icon-Logo-6"></use>
+                  </svg>
+            </li>
+            <li class="company-logo-box">
+              <a href="" class="customers-link link">
+                  <svg class="company-logo" width="104" height="56">
+                    <use class="customers-icon"  href="./images/customers-item2.svg#icon-Logo-1-1"></use>
+                  </svg>
+            </li>
+            <li class="company-logo-box">
+              <a href="" class="customers-link link">
+                  <svg class="company-logo" width="104" height="56">
+                    <use class="customers-icon"  href="./images/customers-item2.svg#icon-Logo-2-1"></use>
+                  </svg>
+            </li>
+            <li class="company-logo-box">
+              <a href="" class="customers-link link">
+                  <svg class="company-logo" width="104" height="56">
+                    <use class="customers-icon"  href="./images/customers-item2.svg#icon-Logo-3-1"></use>
+                  </svg>
+            </li>
+            <li class="company-logo-box">
+              <a href="" class="customers-link link">
+                  <svg class="company-logo" width="104" height="56">
+                    <use  class="customers-icon"  href="./images/customers-item2.svg#icon-Logo-4-1"></use>
+                  </svg>
+            </li>
+            <li class="company-logo-box">
+              <a href="" class="customers-link link">
+                  <svg class="company-logo" width="104" height="56">
+                    <use class="customers-icon"  href="./images/customers-item2.svg#icon-Logo-5-1"></use>
+                  </svg>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-content">
-        <a href="./index.html" class="footer-logo link">
-          <span class="accent">Web</span>Studio</a
-        >
-        <p class="footer-desc">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container">
+        <div class="footer-content">
+          <div>
+            <a href="./index.html" class="footer-logo link">
+              <span class="accent">Web</span>Studio</a
+            >
+            <p class="footer-desc">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-content-secondary">
+            <p class="footer-text-secondary">Social media</p>
+            <ul class="team-soc-list list">
+              <li class="team-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="team-soc-item" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="team-soc-item" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="team-soc-item" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="team-soc-item" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
