--- a/portfolio.html
+++ b/portfolio.html
@@ -184,14 +184,51 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-content">
-        <a href="./index.html" class="footer-logo link">
-          <span class="accent">Web</span>Studio</a
-        >
-        <p class="footer-desc">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container">
+        <div class="footer-content">
+          <div>
+            <a href="./index.html" class="footer-logo link">
+              <span class="accent">Web</span>Studio</a
+            >
+            <p class="footer-desc">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-content-secondary">
+            <p class="footer-text-secondary">Social media</p>
+            <ul class="team-soc-list list">
+              <li class="team-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="team-soc-item" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="team-soc-item" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="team-soc-item" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-soc-item">
+                <a href="" class="footer-soc-link link">
+                  <svg class="team-soc-item" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
