--- a/index.html
+++ b/index.html
@@ -70,28 +70,60 @@
         <div class="container advantages-content">
           <h2 class="section-title visually-hidden">Our advantages</h2>
           <ul class="section-list">
-            <li class="section-item list icon-antenna">
+            <li class="section-item list">
+              <div class="advantages-icon-box">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use
+                    class="advantages-icon"
+                    href="./images/advantages-icon.svg#icon-antenna-1-1"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Strategy</h3>
               <p class="section-desc">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="section-item list icon-clock">
+            <li class="section-item list">
+              <div class="advantages-icon-box">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use
+                    class="advantages-icon"
+                    href="./images/advantages-icon.svg#icon-clock-1-1"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Punctuality</h3>
               <p class="section-desc">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="section-item list icon-diagram">
+            <li class="section-item list">
+              <div class="advantages-icon-box">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use
+                    class="advantages-icon"
+                    href="./images/advantages-icon.svg#icon-diagram-1-1"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Diligence</h3>
               <p class="section-desc">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="section-item list icon-astronaut">
+            <li class="section-item list">
+              <div class="advantages-icon-box">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use
+                    class="advantages-icon"
+                    href="./images/advantages-icon.svg#icon-astronaut-1-1"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Technologies</h3>
               <p class="section-desc">
                 Design practice focused on digital experiences. We bring forth a
@@ -301,42 +333,48 @@
       <section class="customers section">
         <div class="container">
           <h2 class="section-title">Customers</h2>
-          <ul class="company-list">
+          <ul class="company-list list">
             <li class="company-logo-box">
-              <a href="" class="customers-link link">
-                  <svg class="company-logo" width="104" height="56">
-                    <use class="customers-icon" href="./images/customers-item2.svg#icon-Logo-6"></use>
-                  </svg>
+              <a class="customers-link link" href="">
+                <svg class="company-logo" width="104" height="56">
+                  <use href="./images/customers-item2.svg#icon-Logo-6"></use>
+                </svg>
+              </a>
             </li>
             <li class="company-logo-box">
-              <a href="" class="customers-link link">
-                  <svg class="company-logo" width="104" height="56">
-                    <use class="customers-icon"  href="./images/customers-item2.svg#icon-Logo-1-1"></use>
-                  </svg>
+              <a class="customers-link link" href="">
+                <svg class="company-logo" width="104" height="56">
+                  <use href="./images/customers-item2.svg#icon-Logo-1-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="company-logo-box">
-              <a href="" class="customers-link link">
-                  <svg class="company-logo" width="104" height="56">
-                    <use class="customers-icon"  href="./images/customers-item2.svg#icon-Logo-2-1"></use>
-                  </svg>
+              <a class="customers-link link" href="">
+                <svg class="company-logo" width="104" height="56">
+                  <use href="./images/customers-item2.svg#icon-Logo-2-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="company-logo-box">
-              <a href="" class="customers-link link">
-                  <svg class="company-logo" width="104" height="56">
-                    <use class="customers-icon"  href="./images/customers-item2.svg#icon-Logo-3-1"></use>
-                  </svg>
+              <a class="customers-link link" href="">
+                <svg class="company-logo" width="104" height="56">
+                  <use href="./images/customers-item2.svg#icon-Logo-3-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="company-logo-box">
-              <a href="" class="customers-link link">
-                  <svg class="company-logo" width="104" height="56">
-                    <use  class="customers-icon"  href="./images/customers-item2.svg#icon-Logo-4-1"></use>
-                  </svg>
+              <a class="customers-link link" href="">
+                <svg class="company-logo" width="104" height="56">
+                  <use href="./images/customers-item2.svg#icon-Logo-4-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="company-logo-box">
-              <a href="" class="customers-link link">
-                  <svg class="company-logo" width="104" height="56">
-                    <use class="customers-icon"  href="./images/customers-item2.svg#icon-Logo-5-1"></use>
-                  </svg>
+              <a class="customers-link link" href="">
+                <svg class="company-logo" width="104" height="56">
+                  <use href="./images/customers-item2.svg#icon-Logo-5-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -359,28 +397,28 @@
             <ul class="team-soc-list list">
               <li class="team-soc-item">
                 <a href="" class="footer-soc-link link">
-                  <svg class="team-soc-item" width="16" height="16">
+                  <svg class="team-soc-item" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="team-soc-item">
                 <a href="" class="footer-soc-link link">
-                  <svg class="team-soc-item" width="16" height="16">
+                  <svg class="team-soc-item" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="team-soc-item">
                 <a href="" class="footer-soc-link link">
-                  <svg class="team-soc-item" width="16" height="16">
+                  <svg class="team-soc-item" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="team-soc-item">
                 <a href="" class="footer-soc-link link">
-                  <svg class="team-soc-item" width="16" height="16">
+                  <svg class="team-soc-item" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </a>
