--- a/portfolio.html
+++ b/portfolio.html
@@ -81,103 +81,123 @@
           </ul>
           <ul class="visually-list">
             <li class="visually-item list">
-              <img
-                src="./images/portfolio/img1.jpg"
-                alt="Application"
-                width="360"
-              />
-              <div class="gallery-content">
-                <h3 class="section-subtitle">Banking App Interface Concept</h3>
-                <p class="section-desc">App</p>
-              </div>
+              <a class="visually-link link" href="">
+                <img
+                  src="./images/portfolio/img1.jpg"
+                  alt="Application"
+                  width="360"
+                />
+                <div class="gallery-content">
+                  <h3 class="section-subtitle">
+                    Banking App Interface Concept
+                  </h3>
+                  <p class="section-desc">App</p>
+                </div>
+              </a>
             </li>
             <li class="visually-item list">
-              <img
-                src="./images/portfolio/img2.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <div class="gallery-content">
-                <h3 class="section-subtitle">Cashless Payment</h3>
-                <p class="section-desc">Marketing</p>
-              </div>
+              <a class="visually-link link" href="">
+                <img
+                  src="./images/portfolio/img2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="gallery-content">
+                  <h3 class="section-subtitle">Cashless Payment</h3>
+                  <p class="section-desc">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="visually-item list">
-              <img
-                src="./images/portfolio/img3.jpg"
-                alt="Meditaion App"
-                width="360"
-              />
-              <div class="gallery-content">
-                <h3 class="section-subtitle">Meditaion App</h3>
-                <p class="section-desc">App</p>
-              </div>
+              <a class="visually-link link" href="">
+                <img
+                  src="./images/portfolio/img3.jpg"
+                  alt="Meditaion App"
+                  width="360"
+                />
+                <div class="gallery-content">
+                  <h3 class="section-subtitle">Meditaion App</h3>
+                  <p class="section-desc">App</p>
+                </div>
+              </a>
             </li>
             <li class="visually-item list">
-              <img
-                src="./images/portfolio/img4.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
-              <div class="gallery-content">
-                <h3 class="section-subtitle">Taxi Service</h3>
-                <p class="section-desc">Marketing</p>
-              </div>
+              <a class="visually-link link" href="">
+                <img
+                  src="./images/portfolio/img4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <div class="gallery-content">
+                  <h3 class="section-subtitle">Taxi Service</h3>
+                  <p class="section-desc">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="visually-item list">
-              <img
-                src="./images/portfolio/img5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <div class="gallery-content">
-                <h3 class="section-subtitle">Screen Illustrations</h3>
-                <p class="section-desc">Design</p>
-              </div>
+              <a class="visually-link link" href="">
+                <img
+                  src="./images/portfolio/img5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="gallery-content">
+                  <h3 class="section-subtitle">Screen Illustrations</h3>
+                  <p class="section-desc">Design</p>
+                </div>
+              </a>
             </li>
             <li class="visually-item list">
-              <img
-                src="./images/portfolio/img6.jpg"
-                alt="Online Courses"
-                width="360"
-              />
-              <div class="gallery-content">
-                <h3 class="section-subtitle">Online Courses</h3>
-                <p class="section-desc">Marketing</p>
-              </div>
+              <a class="visually-link link" href="">
+                <img
+                  src="./images/portfolio/img6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <div class="gallery-content">
+                  <h3 class="section-subtitle">Online Courses</h3>
+                  <p class="section-desc">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="visually-item list">
-              <img
-                src="./images/portfolio/img7.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-              />
-              <div class="gallery-content">
-                <h3 class="section-subtitle">Instagram Stories Concept</h3>
-                <p class="section-desc">Design</p>
-              </div>
+              <a class="visually-link link" href="">
+                <img
+                  src="./images/portfolio/img7.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                />
+                <div class="gallery-content">
+                  <h3 class="section-subtitle">Instagram Stories Concept</h3>
+                  <p class="section-desc">Design</p>
+                </div>
+              </a>
             </li>
             <li class="visually-item list">
-              <img
-                src="./images/portfolio/img8.jpg"
-                alt="Organic Food"
-                width="360"
-              />
-              <div class="gallery-content">
-                <h3 class="section-subtitle">Organic Food</h3>
-                <p class="section-desc">Web Site</p>
-              </div>
+              <a class="visually-link link" href="">
+                <img
+                  src="./images/portfolio/img8.jpg"
+                  alt="Organic Food"
+                  width="360"
+                />
+                <div class="gallery-content">
+                  <h3 class="section-subtitle">Organic Food</h3>
+                  <p class="section-desc">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="visually-item list">
-              <img
-                src="./images/portfolio/img9.jpg"
-                alt="Fresh Coffee"
-                width="360"
-              />
-              <div class="gallery-content">
-                <h3 class="section-subtitle">Fresh Coffee</h3>
-                <p class="section-desc">Web Site</p>
-              </div>
+              <a class="visually-link link" href="">
+                <img
+                  src="./images/portfolio/img9.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                />
+                <div class="gallery-content">
+                  <h3 class="section-subtitle">Fresh Coffee</h3>
+                  <p class="section-desc">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -200,28 +220,28 @@
             <ul class="team-soc-list list">
               <li class="team-soc-item">
                 <a href="" class="footer-soc-link link">
-                  <svg class="team-soc-item" width="16" height="16">
+                  <svg class="team-soc-item" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="team-soc-item">
                 <a href="" class="footer-soc-link link">
-                  <svg class="team-soc-item" width="16" height="16">
+                  <svg class="team-soc-item" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="team-soc-item">
                 <a href="" class="footer-soc-link link">
-                  <svg class="team-soc-item" width="16" height="16">
+                  <svg class="team-soc-item" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="team-soc-item">
                 <a href="" class="footer-soc-link link">
-                  <svg class="team-soc-item" width="16" height="16">
+                  <svg class="team-soc-item" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </a>
