--- a/index.html
+++ b/index.html
@@ -335,42 +335,42 @@
           <h2 class="section-title">Customers</h2>
           <ul class="company-list list">
             <li class="company-logo-box">
-              <a class="customers-link link" href="">
+              <a href="" class="customers-link link">
                 <svg class="company-logo" width="104" height="56">
                   <use href="./images/customers-item2.svg#icon-Logo-6"></use>
                 </svg>
               </a>
             </li>
             <li class="company-logo-box">
-              <a class="customers-link link" href="">
+              <a href="" class="customers-link link">
                 <svg class="company-logo" width="104" height="56">
                   <use href="./images/customers-item2.svg#icon-Logo-1-1"></use>
                 </svg>
               </a>
             </li>
             <li class="company-logo-box">
-              <a class="customers-link link" href="">
+              <a href="" class="customers-link link">
                 <svg class="company-logo" width="104" height="56">
                   <use href="./images/customers-item2.svg#icon-Logo-2-1"></use>
                 </svg>
               </a>
             </li>
             <li class="company-logo-box">
-              <a class="customers-link link" href="">
+              <a href="" class="customers-link link">
                 <svg class="company-logo" width="104" height="56">
                   <use href="./images/customers-item2.svg#icon-Logo-3-1"></use>
                 </svg>
               </a>
             </li>
             <li class="company-logo-box">
-              <a class="customers-link link" href="">
+              <a href="" class="customers-link link">
                 <svg class="company-logo" width="104" height="56">
                   <use href="./images/customers-item2.svg#icon-Logo-4-1"></use>
                 </svg>
               </a>
             </li>
             <li class="company-logo-box">
-              <a class="customers-link link" href="">
+              <a href="" class="customers-link link">
                 <svg class="company-logo" width="104" height="56">
                   <use href="./images/customers-item2.svg#icon-Logo-5-1"></use>
                 </svg>
